trying to fix spacing on links

--- a/style.less
+++ b/style.less
@@ -219,8 +219,7 @@ form {
 .links {
     text-decoration: none;
     color: @main-color;
-    padding-right: 3em;
-    &:hover, &:active {color:@hover-color;}  
+    padding-right: 3em; 
 
     a {
         color: @main-color;
